Update POM to use dedicated parent
Also update github actions for correct java version