@@ -1,187 +1,142 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <groupId>io.github.mooeypoo</groupId>
-  <artifactId>ChatMonitor</artifactId>
-  <version>1.2.0</version>
-  <name>Minecraft Chat Monitor</name>
+    <!-- Parent pom at: https://github.com/mooeypoo/mooeypoo-parent-pom -->
+    <parent>
+        <groupId>io.github.mooeypoo</groupId>
+        <artifactId>minecraft-plugin-pom</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+    </parent>
 
+    <groupId>io.github.mooeypoo</groupId>
+    <artifactId>ChatMonitor</artifactId>
+    <version>1.2.0</version>
+    <name>Minecraft Chat Monitor</name>
 
-	<licenses>
-		<license>
-			<name>GNU General Public License, Version 3</name>
-			<url>https://www.gnu.org/licenses/</url>
-			<distribution>repo</distribution>
-			<comments>Strong copyleft license, commonly known as the GNU GPL v3</comments>
-		</license>
-	</licenses>
+    <licenses>
+        <license>
+            <name>GNU General Public License, Version 3</name>
+            <url>https://www.gnu.org/licenses/</url>
+            <distribution>repo</distribution>
+            <comments>Strong copyleft license, commonly known as the GNU GPL v3</comments>
+        </license>
+    </licenses>
+    <dependencies>
+        <dependency>
+            <groupId>com.github.seeseemelk</groupId>
+            <artifactId>MockBukkit-v1.16</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-artifact</artifactId>
+            <version>3.6.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+        </dependency>
 
-	<build>
-		<sourceDirectory>src/main/java</sourceDirectory>
-		<resources>
-			<resource>
-				<directory>src/main/resources</directory>
-				<filtering>true</filtering>
-			</resource>
-		</resources>
-		<plugins>
-	        <plugin>
-	            <groupId>org.apache.maven.plugins</groupId>
-	            <artifactId>maven-compiler-plugin</artifactId>
-	            <version>3.8.1</version>
-	            <configuration>
-	                <release>17</release>
-	            </configuration>
-	        </plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-shade-plugin</artifactId>
-				<version>3.3.0-SNAPSHOT</version>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>shade</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<relocations>
-						<relocation>
-							<pattern>space.arim.dazzleconf</pattern>
-							<shadedPattern>io.github.mooeypoo.chatmonitor.shaded.dazzleconf</shadedPattern>
-						</relocation>
-					</relocations>
-				</configuration>
-			</plugin>
-      		<plugin>
-	  		    <groupId>org.jacoco</groupId>
-	  		    <artifactId>jacoco-maven-plugin</artifactId>
-	  		    <version>0.8.5</version>
-	  		    <configuration>
-	  		    </configuration>
-	  		    <executions>
-	  		        <!--
+        <dependency>
+            <groupId>space.arim.dazzleconf</groupId>
+            <artifactId>dazzleconf-ext-snakeyaml</artifactId>
+            <version>1.2.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.8.0</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <resources>
+            <resource>
+                <filtering>true</filtering>
+                <directory>src/main/resources</directory>
+            </resource>
+        </resources>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <release>17</release>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.3.0-SNAPSHOT</version>
+                <configuration>
+                    <relocations>
+                        <relocation>
+                            <pattern>space.arim.dazzleconf</pattern>
+                            <shadedPattern>io.github.mooeypoo.chatmonitor.shaded.dazzleconf</shadedPattern>
+                        </relocation>
+                    </relocations>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <phase>package</phase>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.5</version>
+                <configuration />
+                <executions>
+                    <!--
 	  		            Prepares the property pointing to the JaCoCo runtime agent which
 	  		            is passed as VM argument when Maven the Surefire plugin is executed.
 	  		        -->
-	  		        <execution>
-	  		            <id>pre-unit-test</id>
-	  		            <goals>
-	  		                <goal>prepare-agent</goal>
-	  		            </goals>
-	  		            <configuration>
-	  		                <!-- Sets the path to the file which contains the execution data. -->
-	  		                <destFile>${project.build.directory}/coverage-reports/jacoco.exec</destFile>
-	  		                <!--
+                    <execution>
+                        <id>pre-unit-test</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                        <configuration>
+                            <!-- Sets the path to the file which contains the execution data. -->
+                            <destFile>${project.build.directory}/coverage-reports/jacoco.exec</destFile>
+                            <!--
 	  		                    Sets the name of the property containing the settings
 	  		                    for JaCoCo runtime agent.
 	  		                -->
-	  		                <propertyName>surefireArgLine</propertyName>
-	  		            </configuration>
-	  		        </execution>
-	  		        <!--
+                            <propertyName>surefireArgLine</propertyName>
+                        </configuration>
+                    </execution>
+                    <!--
 	  		            Ensures that the code coverage report for unit tests is created after
 	  		            unit tests have been run.
 	  		        -->
-	  		        <execution>
-	  		            <id>post-unit-test</id>
-	  		            <phase>test</phase>
-	  		            <goals>
-	  		                <goal>report</goal>
-	  		            </goals>
-	  		            <configuration>
-	  		                <!-- Sets the path to the file which contains the execution data. -->
-	  		                <dataFile>${project.build.directory}/coverage-reports/jacoco.exec</dataFile>
-	  		                <!-- Sets the output directory for the code coverage report. -->
-	  		                <outputDirectory>${project.reporting.outputDirectory}/jacoco</outputDirectory>
-	  		            </configuration>
-	  		        </execution>
-	  		    </executions>
-	  		</plugin>
-
-	      <!-- Used for unit tests -->
-	      <plugin>
-	        <groupId>org.apache.maven.plugins</groupId>
-	        <artifactId>maven-surefire-plugin</artifactId>
-	        <version>3.0.0-M1</version>
-	        <configuration>
-	          <testFailureIgnore>true</testFailureIgnore>
-	          <!-- Sets the VM argument line used when unit tests are run. -->
-	          <!-- argLine>${surefireArgLine}</argLine -->
-	                <argLine>-Xmx1024m -XX:MaxPermSize=256m ${surefireArgLine}</argLine>
-	          <!-- Skips unit tests if the value of skip.unit.tests property is true -->
-	          <skipTests>${skip.unit.tests}</skipTests>
-	          <!-- Excludes integration tests when unit tests are run. -->
-	          <excludes>
-	            <exclude>**/IT*.java</exclude>
-	          </excludes>
-	        </configuration>
-	  		</plugin>
-		</plugins>
-	</build>
-	<pluginRepositories>
-	    <pluginRepository>
-	        <id>maven-snapshots</id>
-	        <url>https://repository.apache.org/content/repositories/snapshots/</url>
-	    </pluginRepository>
-	</pluginRepositories>
-	<repositories>
-	    <repository>
-	      <id>spigot-repo</id>
-	      <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
-	    </repository>
-	</repositories>
-
-	<dependencies>
-	    <dependency>
-	      <groupId>org.spigotmc</groupId>
-	      <artifactId>spigot-api</artifactId>
-	      <version>1.18-R0.1-SNAPSHOT</version>
-	      <type>jar</type>
-	      <scope>provided</scope>
-	    </dependency>
-
-		<dependency>
-			<groupId>space.arim.dazzleconf</groupId>
-			<artifactId>dazzleconf-ext-snakeyaml</artifactId>
-			<version>1.2.1</version>
-		</dependency>
-	
-		<dependency>
-			<groupId>org.yaml</groupId>
-			<artifactId>snakeyaml</artifactId>
-			<version>1.28</version>
-			<scope>provided</scope>
-		</dependency>
-
-		<dependency>
-		    <groupId>org.apache.maven</groupId>
-		    <artifactId>maven-artifact</artifactId>
-		    <version>3.6.3</version>
-		</dependency>
-	
-		<dependency>
-	      <groupId>junit</groupId>
-	      <artifactId>junit</artifactId>
-	      <version>4.13.1</version>
-	      <scope>test</scope>
-	    </dependency>
-	
-		<dependency>
-		    <groupId>commons-io</groupId>
-		    <artifactId>commons-io</artifactId>
-		    <version>2.8.0</version>
-		    <scope>test</scope>
-		</dependency>	
-
-		<dependency>
-		    <groupId>com.github.seeseemelk</groupId>
-		    <artifactId>MockBukkit-v1.16</artifactId>
-		    <version>0.5.0</version>
-		    <scope>test</scope>
-	    </dependency>
-  </dependencies>
+                    <execution>
+                        <id>post-unit-test</id>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                        <phase>test</phase>
+                        <configuration>
+                            <!-- Sets the path to the file which contains the execution data. -->
+                            <dataFile>${project.build.directory}/coverage-reports/jacoco.exec</dataFile>
+                            <!-- Sets the output directory for the code coverage report. -->
+                            <outputDirectory>${project.reporting.outputDirectory}/jacoco</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+        <sourceDirectory>src/main/java</sourceDirectory>
+    </build>
 </project>
